--- a/css.css
+++ b/css.css
@@ -1,4 +1,4 @@
-
+/*
 
 body{
   background: #312240;
@@ -61,4 +61,4 @@ button:active {
   margin-right: 40%; 
   padding-top: 2px; 
   padding-bottom: 8px; 
-}
+}*/
