--- a/css.css
+++ b/css.css
@@ -4,6 +4,29 @@ body{
   text-align: center; 
   color: #D3F5EF;
   font-family: 'Orbitron', sans-serif;
+    margin: 0;
+}
+
+/* Nav */
+
+nav {
+  background: black;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  width: 100%;
+  font-family: sans-serif;
+  font-family: "Circle", Verdana, Tahoma;
+  text-align: center;
+  vertical-align: middle;
+}
+
+#nic {
+  color: #40CC33;
+  text-decoration: none;
+}
+
+#nic:hover {
+  color: #4A9943;
 }
 
 /* Calculator Body */
