--- a/css.css
+++ b/css.css
@@ -15,6 +15,8 @@ nav {
   padding-bottom: 10px;
   padding-top: 10px;
   width: 100%;
+  position: fixed;
+  bottom: 0;
   font-family: sans-serif;
   font-family: "Circle", Verdana, Tahoma;
   text-align: center;
